<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingBottom="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingLeft="10dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textStyle="bold" />

        <TextView android:id="@+id/lblUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblusuario"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
        </LinearLayout>

    <EditText android:id="@+id/TxtUsuario"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text" />

    <TextView android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrasena"
        android:textStyle="bold" />

    <com.banchero_dam3.jm.unidad3_eje1.ExtendedEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TxtPassSeguridad"
        android:inputType="textPassword" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repitacontrasena"
            android:textStyle="bold" />

        <TextView android:id="@+id/LblMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:paddingRight="20dp" />

    </LinearLayout>

    <EditText android:id="@+id/TxtPassRepite"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPassword" />

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BtnAceptar"
            android:text="@string/validar"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewAlerta"
                android:src="@android:drawable/ic_dialog_info"
                android:contentDescription="@string/imagenalerta" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/lblInfo"
                android:paddingTop="10dp"
                android:layout_gravity="center_horizontal"
                android:paddingRight="10dp"
                android:paddingLeft="10dp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>